--- a/week-1/problems/5-vscode-bottombar/index.html
+++ b/week-1/problems/5-vscode-bottombar/index.html
@@ -4,7 +4,7 @@
     <title>Visual Studio Code Landing Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
             background-color: black;
         }
         .container {
